back-end/k8s/dev/notifications-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications
  labels:
    name: notifications
    app: htx-back-end
spec:
  replicas: 1
  selector:
    matchLabels:
      name: notifications
      app: htx-back-end
  template:
    metadata:
      labels:
        name: notifications
        app: htx-back-end
    spec:
      containers:
        - name: notifications
          image: back-end-notifications:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-service
  labels:
    name: notifications-service
    app: htx-back-end
spec:
  ports:
    - name: 'http'
      port: 3020
      protocol: TCP
      targetPort: 3020
  selector:
    name: notifications
    app: htx-back-end
  type: NodePort
