back-end/k8s/dev/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    name: postgres-deployment
    app: htx-back-end
spec:
  selector:
    matchLabels:
      name: postgres
      app: htx-back-end
  replicas: 1
  template:
    metadata:
      name: postgres
      labels:
        name: postgres
        app: htx-back-end
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: '/var/lib/postgresql/data'
              name: postgredb
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    name: postgres-service
    app: htx-back-end
spec:
  type: ClusterIP
  selector:
    name: postgres
    app: htx-back-end
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-ext-service
  labels:
    name: postgres-ext-service
    app: htx-back-end
spec:
  type: NodePort
  selector:
    name: postgres
    app: htx-back-end
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 30030
