back-end/k8s/dev/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    name: redis-deployment
    app: htx-back-end
spec:
  selector:
    matchLabels:
      name: redis
      app: htx-back-end
  replicas: 1
  template:
    metadata:
      labels:
        name: redis
        app: htx-back-end
    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    name: redis
    app: htx-back-end
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
