back-end/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-end
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: notifications-service
                port:
                  number: 3020
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-http-service
                port:
                  number: 3000
  tls:
    - secretName: self-signed-certificate
